Fix dark mode of mobile navbar

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -8,7 +8,11 @@
     }
 
     .icon-bar {
-        background: $site-ui-brand-light;
+        @include themer(background, (
+            'dark': $site-ui-brand-dark,
+            'light': $site-ui-brand-light,
+        ));
+
         border-radius: 1px;
         display: block;
         height: 2px;
